--- a/14. CR_Trial/cr_trial.html
+++ b/14. CR_Trial/cr_trial.html
@@ -8,62 +8,68 @@
 
     <title>Form Input Data</title>
   </head>
-  <body class="d-flex flex-column min-vh-100">
+  <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Aplikasi Sensor</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+    <div class="container">
 
-    <div class="container mt-4">
-      <h1 class="mb-4">Input Data Pengukuran</h1>
-      <form>
-        <div class="mb-3">
-          <label for="pembacaanAlat" class="form-label">Pembacaan Alat</label>
-          <input type="text" class="form-control" id="pembacaanAlat" placeholder="Masukkan nilai pembacaan">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark mt-3">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Aplikasi Sensor</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+            </ul>
+          </div>
         </div>
-        <div class="mb-3">
-          <label for="panjang" class="form-label">Panjang (meter)</label>
-          <input type="number" class="form-control" id="panjang" placeholder="Masukkan panjang">
-        </div>
-        <div class="mb-3">
-          <label for="penghantar" class="form-label">Penghantar</label>
-          <input type="text" class="form-control" id="penghantar" placeholder="Contoh: Tembaga, Aluminium">
-        </div>
-        <div class="mb-3">
-          <label for="penampang" class="form-label">Penampang (mm²)</label>
-          <input type="number" class="form-control" id="penampang" placeholder="Masukkan luas penampang">
-        </div>
-        <div class="mb-3">
-          <label for="suhu" class="form-label">Suhu (°C)</label>
-          <input type="number" class="form-control" id="suhu" placeholder="Masukkan suhu lingkungan">
-        </div>
-        <div class="mb-3">
-          <label for="faktorKoreksi" class="form-label">Faktor Koreksi Suhu</label>
-          <input type="text" class="form-control" id="faktorKoreksi" placeholder="Masukkan nilai faktor koreksi">
-        </div>
-        <button type="submit" class="btn btn-primary w-100">Submit</button>
-      </form>
-    </div>
+      </nav>
 
-    <footer class="mt-auto py-3 bg-light text-center">
-      <div class="container">
-        <span class="text-muted">Williyanto Adi</span>
-      </div>
-    </footer>
+      <main class="mt-4">
+        <h1 class="mb-4">Input Data Pengukuran</h1>
+        <form>
+          <fieldset class="border p-3 rounded">
+            <legend class="float-none w-auto px-2 h6">Data Pengukuran</legend>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+            <div class="mb-3">
+              <label for="pembacaanAlat" class="form-label">Pembacaan Alat</label>
+              <input type="text" class="form-control" id="pembacaanAlat" placeholder="Masukkan nilai pembacaan">
+            </div>
+            <div class="mb-3">
+              <label for="panjang" class="form-label">Panjang (meter)</label>
+              <input type="number" class="form-control" id="panjang" placeholder="Masukkan panjang">
+            </div>
+            <div class="mb-3">
+              <label for="penghantar" class="form-label">Penghantar</label>
+              <input type="text" class="form-control" id="penghantar" placeholder="Contoh: Tembaga, Aluminium">
+            </div>
+            <div class="mb-3">
+              <label for="penampang" class="form-label">Penampang (mm²)</label>
+              <input type="number" class="form-control" id="penampang" placeholder="Masukkan luas penampang">
+            </div>
+            <div class="mb-3">
+              <label for="suhu" class="form-label">Suhu (°C)</label>
+              <input type="number" class="form-control" id="suhu" placeholder="Masukkan suhu lingkungan">
+            </div>
+            <div class="mb-3">
+              <label for="faktorKoreksi" class="form-label">Faktor Koreksi Suhu</label>
+              <input type="text" class="form-control" id="faktorKoreksi" placeholder="Masukkan nilai faktor koreksi">
+            </div>
+
+          </fieldset>
+          
+          <button type="submit" class="btn btn-primary w-100 mt-3">Submit</button>
+        </form>
+      </main>
+
+      <footer class="py-3 my-4">
+        <p class="text-center text-muted">Williyanto Adi</p>
+      </footer>
+
+    </div> <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
   </body>
 </html>
