--- a/14. CR_Trial/cr_trial.html
+++ b/14. CR_Trial/cr_trial.html
@@ -2,8 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <title>Form Input Data</title>
@@ -33,15 +31,22 @@
         <form>
           <fieldset class="border p-3 rounded">
             <legend class="float-none w-auto px-2 h6">Data Pengukuran</legend>
+            
+            <div class="row">
+              <div class="col-sm-6">
+                <div class="mb-3">
+                  <label for="pembacaanAlat" class="form-label">Pembacaan Alat</label>
+                  <input type="text" class="form-control" id="pembacaanAlat" placeholder="Masukkan nilai pembacaan">
+                </div>
+              </div>
+              <div class="col-sm-6">
+                <div class="mb-3">
+                  <label for="panjang" class="form-label">Panjang (meter)</label>
+                  <input type="number" class="form-control" id="panjang" placeholder="Masukkan panjang">
+                </div>
+              </div>
+            </div>
 
-            <div class="mb-3">
-              <label for="pembacaanAlat" class="form-label">Pembacaan Alat</label>
-              <input type="text" class="form-control" id="pembacaanAlat" placeholder="Masukkan nilai pembacaan">
-            </div>
-            <div class="mb-3">
-              <label for="panjang" class="form-label">Panjang (meter)</label>
-              <input type="number" class="form-control" id="panjang" placeholder="Masukkan panjang">
-            </div>
             <div class="mb-3">
               <label for="penghantar" class="form-label">Penghantar</label>
               <input type="text" class="form-control" id="penghantar" placeholder="Contoh: Tembaga, Aluminium">
