--- a/14. CR_Trial/cr_trial.html
+++ b/14. CR_Trial/cr_trial.html
@@ -3,13 +3,10 @@
   <head>
     <meta charset="utf-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
     <title>Form Input Data</title>
   </head>
   <body>
-
     <div class="container">
-
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark mt-3">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Aplikasi Sensor</a>
@@ -31,7 +28,6 @@
         <form>
           <fieldset class="border p-3 rounded">
             <legend class="float-none w-auto px-2 h6">Data Pengukuran</legend>
-            
             <div class="row">
               <div class="col-sm-6">
                 <div class="mb-3">
@@ -46,7 +42,6 @@
                 </div>
               </div>
             </div>
-
             <div class="mb-3">
               <label for="penghantar" class="form-label">Penghantar</label>
               <input type="text" class="form-control" id="penghantar" placeholder="Contoh: Tembaga, Aluminium">
@@ -63,9 +58,7 @@
               <label for="faktorKoreksi" class="form-label">Faktor Koreksi Suhu</label>
               <input type="text" class="form-control" id="faktorKoreksi" placeholder="Masukkan nilai faktor koreksi">
             </div>
-
           </fieldset>
-          
           <button type="submit" class="btn btn-primary w-100 mt-3">Submit</button>
         </form>
       </main>
@@ -73,8 +66,7 @@
       <footer class="py-3 my-4">
         <p class="text-center text-muted">Williyanto Adi</p>
       </footer>
-
-    </div> <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
