--- a/14. CR_Trial/cr_trial.html
+++ b/14. CR_Trial/cr_trial.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Form Input Data</title>
   </head>
@@ -28,36 +29,58 @@
         <form>
           <fieldset class="border p-3 rounded">
             <legend class="float-none w-auto px-2 h6">Data Pengukuran</legend>
+
             <div class="row">
-              <div class="col-sm-6">
+              <div class="col-md-6">
                 <div class="mb-3">
                   <label for="pembacaanAlat" class="form-label">Pembacaan Alat</label>
                   <input type="text" class="form-control" id="pembacaanAlat" placeholder="Masukkan nilai pembacaan">
                 </div>
               </div>
-              <div class="col-sm-6">
+              <div class="col-md-6">
                 <div class="mb-3">
                   <label for="panjang" class="form-label">Panjang (meter)</label>
                   <input type="number" class="form-control" id="panjang" placeholder="Masukkan panjang">
                 </div>
               </div>
             </div>
-            <div class="mb-3">
-              <label for="penghantar" class="form-label">Penghantar</label>
-              <input type="text" class="form-control" id="penghantar" placeholder="Contoh: Tembaga, Aluminium">
+
+            <div class="row">
+              <div class="col-md-6">
+                <div class="mb-3">
+                  <label for="suhu" class="form-label">Suhu (°C)</label>
+                  <input type="number" class="form-control" id="suhu" placeholder="Masukkan suhu lingkungan">
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="mb-3">
+                  <label for="faktorKoreksi" class="form-label">Faktor Koreksi Suhu</label>
+                  <input type="text" class="form-control" id="faktorKoreksi" placeholder="Masukkan nilai faktor koreksi">
+                </div>
+              </div>
             </div>
-            <div class="mb-3">
-              <label for="penampang" class="form-label">Penampang (mm²)</label>
-              <input type="number" class="form-control" id="penampang" placeholder="Masukkan luas penampang">
+            
+            <div class="row">
+              <div class="col-md-4">
+                <div class="mb-3">
+                  <label for="penghantar" class="form-label">Penghantar</label>
+                  <input type="text" class="form-control" id="penghantar" placeholder="Contoh: Tembaga">
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div class="mb-3">
+                  <label for="penampang" class="form-label">Penampang (mm²)</label>
+                  <input type="number" class="form-control" id="penampang" placeholder="Masukkan luas penampang">
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div class="mb-3">
+                  <label for="spekMax" class="form-label">Spek Max</label>
+                  <input type="text" class="form-control" id="spekMax" placeholder="Masukkan spek maksimal">
+                </div>
+              </div>
             </div>
-            <div class="mb-3">
-              <label for="suhu" class="form-label">Suhu (°C)</label>
-              <input type="number" class="form-control" id="suhu" placeholder="Masukkan suhu lingkungan">
-            </div>
-            <div class="mb-3">
-              <label for="faktorKoreksi" class="form-label">Faktor Koreksi Suhu</label>
-              <input type="text" class="form-control" id="faktorKoreksi" placeholder="Masukkan nilai faktor koreksi">
-            </div>
+
           </fieldset>
           <button type="submit" class="btn btn-primary w-100 mt-3">Submit</button>
         </form>
