--- a/14. CR_Trial/cr_trial.html
+++ b/14. CR_Trial/cr_trial.html
@@ -88,15 +88,20 @@
                 </div>
               </div>
             </div>
+            
+            <button type="submit" class="btn btn-primary w-100">Submit</button>
 
+            <footer class="mt-4 pt-3 border-top">
+              <div class="row">
+                <div class="col-md-6 mx-auto">
+                  <p class="text-center text-muted">Williyanto Adi</p>
+                </div>
+              </div>
+            </footer>
           </fieldset>
-          <button type="submit" class="btn btn-primary w-100 mt-3">Submit</button>
         </form>
       </main>
 
-      <footer class="py-3 my-4">
-        <p class="text-center text-muted">Williyanto Adi</p>
-      </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
