--- a/16. web_project/web_project.html
+++ b/16. web_project/web_project.html
@@ -242,7 +242,6 @@
         .project-item, .project-title, .project-divider, .blog-card {
             animation-delay: var(--anim-delay, 0.3s);
         }
-
         /* Responsive tweaks */
         @media (max-width: 767.98px) {
             section {
@@ -432,13 +431,12 @@
             <div>
                 <a href="#" class="text-white me-3 fs-4"><i class="bi bi-github"></i></a>
                 <a href="#" class="text-white me-3 fs-4"><i class="bi bi-linkedin"></i></a>
-                <a href="#" class="text-white fs-4"><i class="bi bi-instagram"></i></a>
-            </div>
-            <!-- Statistik Pengunjung -->
-            <div class="visitor-stat">
-                <img src="https://visitor-badge.laobi.icu/badge?page_id=williyanto.portofolio"
-                     alt="visitor badge" />
-                <span>Pengunjung</span>
+                <a href="#" class="text-white me-3 fs-4"><i class="bi bi-instagram"></i></a>
+                <!-- Icon visitor badge di deretan sosmed -->
+                <span class="me-3 align-middle" style="vertical-align:middle;">
+                    <img src="https://visitor-badge.laobi.icu/badge?page_id=williyanto.portofolio"
+                        alt="visitor badge" style="height:1.5em;vertical-align:middle;">
+                </span>
             </div>
         </div>
     </footer>
