--- a/index.html
+++ b/index.html
@@ -215,8 +215,8 @@
         </div>
         
         <div class="col-6 col-md-6 col-lg-3">
-          <a href="./404.html" class="btn btn-primary btn-project">
-            <i class="fas fa-terminal"></i> Proyek 16
+          <a href="./16. web_project/web_project.html" class="btn btn-primary btn-project">
+            <i class="fas fa-terminal"></i> Web Project
           </a>
         </div>
       </div>
