--- a/16. web_project/web_project.html
+++ b/16. web_project/web_project.html
@@ -216,7 +216,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top shadow">
         <div class="container">
-            <a class="navbar-brand fw-bold" href="#">SoftWill</a>
+            <a class="navbar-brand fw-bold" href="#projects-section" id="brand-link">SoftWill</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigasi">
                 <span class="navbar-toggler-icon"></span>
@@ -396,7 +396,9 @@
             navLinks.forEach(link => {
                 link.classList.remove('active');
             });
-            element.classList.add('active');
+            if (element) {
+                element.classList.add('active');
+            }
             
             // Tutup navbar di perangkat seluler
             if (navbarCollapse.classList.contains('show')) {
@@ -426,6 +428,12 @@
         }
 
         // Event listeners untuk tombol navigasi
+        document.getElementById('brand-link').addEventListener('click', (e) => {
+            e.preventDefault();
+            const homeLink = document.querySelector('a[href="#projects-section"]');
+            showSection('projects', homeLink);
+        });
+        
         document.querySelector('a[href="#projects-section"]').addEventListener('click', (e) => {
             e.preventDefault();
             showSection('projects', e.target);
